Changes, a lot of which suck, rewrite coming